# azure-rag-llmops-end-to-end

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  quickcheck.py
.github/workflows/: ci-cd.yaml
data/: wine-ratings.csv
ingest/: ingest.py
k8s/base/: deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
k8s/overlays/dev/: ingress.yaml  kustomization.yaml  patch-deployment.yaml
k8s/overlays/prod/: ingress.yaml  kustomization.yaml  networkpolicy.yaml  patch-deployment.yaml  patch-hpa.yaml  pdb.yaml
test/: conftest.py  test_core.py  test_health.py  test_integration.py
webapp/: api.py  clients.py  config.py  main.py  metrics.py
webapp/services/: rag.py
